...
    Box(modifier = modifier.fillMaxSize()) {
        LazyColumn(
            state = listState,
            reverseLayout = reverseLayout,
            modifier = Modifier
                .fillMaxSize()
                .testTag("chat-messages"),
            contentPadding = PaddingValues(top = 8.dp, bottom = 18.dp),
            verticalArrangement = Arrangement.spacedBy(itemSpacing),
        ) {
            items(
                items = visual,
                key = { it.listKey },
...
